--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 10px;
+    font-size: 15px;
     font-family: "Open Sans", sans-serif;
     background-color: #E5CFAD;
 }
@@ -33,6 +33,47 @@ img {
     text-shadow:  5px 5px 1px black;
 }
 
+li.special {
+    color: whitesmoke;
+    font-weight: bold;
+}
+
+a:link {
+    color: antiquewhite;
+}
+
+a:visited {
+    color: forestgreen;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.outer {
+    border: 5px solid black;
+}
+
+.box {
+    padding: 10px;
+    width: calc(50% - 30px);
+    background: royalblue;
+    color: white;
+}
+
+.box1 {
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: royalblue;
+    transform: rotate(0.8turn);
+}
+
+@media (min-width: 100em){
+    body {
+        background-color: azure;
+    }
+}
 
 
 
